:bug: Fix image overlapping

--- a/src/scss/blocks/_game.scss
+++ b/src/scss/blocks/_game.scss
@@ -13,7 +13,7 @@
 
         &.pieces {
             gap: var(--offset-y) var(--offset-x);
-            padding-top: calc(var(--pieces-per-side) * var(--offset-y));
+
             .big {
                 transform: scale(4);
                 z-index: 10;
@@ -57,6 +57,5 @@
 }
 
 .image-container {
-    margin-top: 5rem;
-    margin-bottom: 5rem;
+    margin: 5rem 0;
 }
